tests/snapshots/run_wpt_conformance__litert_expand_float32_1D_tensor_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "expand.https.any.js",
    "expand float32 1D tensor to 4D",
    "litert",
    "PASS",
)
